fixing uneven boxes on gov wide page

--- a/webroot/sites/all/themes/dotgov/css/dotgov.css
+++ b/webroot/sites/all/themes/dotgov/css/dotgov.css
@@ -1279,6 +1279,9 @@ th.views-field.sorting_asc {
 .page-overall-gov-wide-compliance .view-wrapper {
 	min-height: 340px;
 }
+.page-overall-gov-wide-compliance h2.pane-title {
+	height: 40px;
+}
 /* media Queries*/
 @media (orientation: portrait) {
 	.full {
